--- a/.env
+++ b/.env
@@ -30,3 +30,7 @@ DATA_VOLUME_HOST=jupyterhub-data
 
 # Data volume container mount point
 DATA_VOLUME_CONTAINER=/data
+
+GITHUB_CLIENT_ID=8dda9e788ad9bd4296d7
+GITHUB_CLIENT_SECRET=9336097764b3fc18b24116c44a99df3b61d86f9f
+OAUTH_CALLBACK_URL=https://localhost/hub/oauth_callback
