--- a/examples/custom-notebook-server/Dockerfile
+++ b/examples/custom-notebook-server/Dockerfile
@@ -2,7 +2,7 @@
 # Distributed under the terms of the Modified BSD License.
 
 # Pin to version of notebook image that includes start-singleuser.sh script
-FROM jupyter/scipy-notebook:2d878db5cbff
+FROM jupyter/scipy-notebook
 
 # Install packages in default Python 3 environment
 RUN pip install \
